@startuml

title __MOXY's Class Diagram__\n

  package com.arellomobile.moxy {
    class MvpAppCompatActivityX {
        - mMvpDelegate : MvpDelegate<? extends MvpAppCompatActivityX>
        # onCreate()
        # onStart()
        # onResume()
        # onSaveInstanceState()
        # onStop()
        # onDestroy()
        + getMvpDelegate()
    }
  }
  

  package com.arellomobile.moxy {
    class MvpAppCompatDialogFragmentX {
        - mIsStateSaved : boolean
        - mMvpDelegate : MvpDelegate<? extends MvpAppCompatDialogFragmentX>
        + onCreate()
        + onResume()
        + onSaveInstanceState()
        + onStop()
        + onDestroyView()
        + onDestroy()
        + getMvpDelegate()
    }
  }
  

  package com.arellomobile.moxy {
    class MvpAppCompatFragmentX {
        - mIsStateSaved : boolean
        - mMvpDelegate : MvpDelegate<? extends MvpAppCompatFragmentX>
        + onCreate()
        + onStart()
        + onResume()
        + onSaveInstanceState()
        + onStop()
        + onDestroyView()
        + onDestroy()
        + getMvpDelegate()
    }
  }
  

  MvpAppCompatActivityX -up-|> AppCompatActivity
  HostCallbacks -up-|> ViewModelStoreOwner
  HostCallbacks -up-|> FragmentHostCallback
  LifecycleAwareOnBackPressedCallback -up-|> OnBackPressedCallback
  LifecycleAwareOnBackPressedCallback -up-|> GenericLifecycleObserver
  MvpAppCompatDialogFragmentX -up-|> AppCompatDialogFragment
  SavedState -up-|> Parcelable
  MvpAppCompatFragmentX -up-|> Fragment
  SavedState -up-|> Parcelable


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
